2011-11-16  Caio Marcelo de Oliveira Filho  <caio.oliveira@openbossa.org>

        [Qt] Fix build after WTR AX support
        https://bugs.webkit.org/show_bug.cgi?id=72560

        Reviewed by Geoffrey Garen.

        * WebKitTestRunner/InjectedBundle/DerivedSources.pri:
        * WebKitTestRunner/InjectedBundle/Target.pri:

2011-11-16  Tony Chang  <tony@chromium.org>

        repurpose the flexbox bot for grid layout
        https://bugs.webkit.org/show_bug.cgi?id=72557

        Reviewed by Ryosuke Niwa.

        Since new flexbox is enabled everywhere, we don't need this bot
        anymore.  However, work on grid layout has begun, so we can use this
        bot to compile with ENABLE_CSS_GRID_LAYOUT.

        * BuildSlaveSupport/build.webkit.org-config/config.json: Just rename
        the bot on the waterfall, I will change the slave config to enable
        the compile flag and tests.

2011-11-11  Adrienne Walker  <enne@google.com>

        [chromium] Expose mock scrollbars to window.internals
        https://bugs.webkit.org/show_bug.cgi?id=72195

        Reviewed by James Robinson.

        Because mock scrollbars are a global setting, reset between runs.

        * DumpRenderTree/chromium/WebPreferences.cpp:
        (WebPreferences::applyTo):

2011-11-16  James Robinson  <jamesr@chromium.org>

        [chromium] Enable video and canvas 2d compositing triggers by default for layout tests in the compositing directory
        https://bugs.webkit.org/show_bug.cgi?id=72562

        Reviewed by Dirk Pranke.

        * DumpRenderTree/chromium/TestShell.cpp:
        (TestShell::runFileTest):

2011-11-16  Tony Chang  <tony@chromium.org>

        [NRWT] speculative fix for multiple subprocess test on cygwin
        https://bugs.webkit.org/show_bug.cgi?id=72518

        Reviewed by Adam Barth.

        * Scripts/webkitpy/layout_tests/port/chromium.py: cygwin probably
            tries to emulate posix fd behavior.